--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,9 +59,12 @@
     <div class="container">
       <div class="content">
         <div class="row">
-           <div class="span9">
-              <%= yield %>
+           <div class="span12">
+              <div data-pjax-container>
+                <%= yield %>
+              </div>
             </div>
+<!-- 
             <div class="span3">
               <div class="well sidebar-nav">
                 <h3>Sidebar</h3>
@@ -71,14 +74,20 @@
                   <li><%= link_to "Link2", "/path2"  %></li>
                   <li><%= link_to "Link3", "/path3"  %></li>
                 </ul>
-              </div><!--/.well -->
-            </div><!--/span-->
+              </div>
+            </div>
+             -->
         </div><!--/row-->
       </div><!--/content-->
 
       <footer>
         <p>&copy; Company 2012</p>
+        <% if Rails.env == 'development' %>
+          <%= debug session %>
+          <%= debug params %>
+        <% end %>        
       </footer>
+
 
     </div> <!-- /container -->
 
